# Build-And-Deploy-RAG-UsingAWS-Lamda-ECR-Sagemaker-Docker-Langchain

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.json
QASystem/: api.py  config.py
QASystem/core/: logger.py
QASystem/services/: embedding.py  rag.py  vectorstore.py
