[project]
name = "llmops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.34.37",
    "bs4>=0.0.2",
    "chromadb>=1.4.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchainhub>=0.1.21",
    "tiktoken>=0.12.0",
]
